--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_login: ^4.1.1
+  flutter_advanced_segment: ^3.0.2
+  searchable_listview: ^2.4.0
 
 dev_dependencies:
   flutter_test:
