--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   flutter_login: ^4.1.1
   flutter_advanced_segment: ^3.0.2
   card_settings: ^3.3.0
+  image_picker: ^0.8.7+5
+  image: ^4.0.17
+  image_cropper: ^4.0.1
+  animated_theme_switcher: ^2.0.8
 
 dev_dependencies:
   flutter_test:
