--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ flutter:
   assets:
     - assets/images/logo.png
     - assets/images/profile.png
+    - assets/images/user_profile.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
