--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   firebase_core: ^2.13.0
   cloud_firestore: ^4.7.1
   flutter_fast_forms: ^11.0.0
+  firebase_storage: ^11.2.2
 
 dev_dependencies:
   flutter_test:
