--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         
     </application>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" /> 
 <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 <queries>
     <package android:name="com.google.android.apps.nbu.paisa.user" />
