--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_fast_forms: ^11.0.0
   firebase_storage: ^11.2.2
   flutter_native_splash: ^2.3.0
+  cloud_functions: ^4.3.3
 
 
 flutter_native_splash:
