Update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -4,44 +4,42 @@
 *.pyc
 *.swp
 .DS_Store
-.atom/
-.buildlog/
-.history
-.svn/
-migrate_working_dir/
+/source/.atom/
+/source/.buildlog/
+/source/.history
+/source/.svn/
+/source/migrate_working_dir/
 
 # IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
+/source/*.iml
+/source/*.ipr
+/source/*.iws
+/source/.idea/
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
-#.vscode/
+#/source/.vscode/
 
 # Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
-.dart_tool/
-.flutter-plugins
-.flutter-plugins-dependencies
-.packages
-.pub-cache/
-.pub/
-/build/
-/functions/
-
+/source/**/doc/api/
+/source/**/ios/Flutter/.last_build_id
+/source/.dart_tool/
+/source/.flutter-plugins
+/source/.flutter-plugins-dependencies
+/source/.packages
+/source/.pub-cache/
+/source/.pub/
+/source/build/
+/source/functions/
 
 # Symbolication related
-app.*.symbols
+/source/app.*.symbols
 
 # Obfuscation related
-app.*.map.json
+/source/app.*.map.json
 
 # Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
-
+/source/android/app/debug
+/source/android/app/profile
+/source/android/app/release
