--- a/source/pubspec.yaml
+++ b/source/pubspec.yaml
@@ -2,7 +2,7 @@ name: pawfection
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0-94.0.dev <4.0.0'
+  sdk: ">=3.1.0-94.0.dev <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -48,7 +48,7 @@ dependencies:
   firebase_auth: ^4.6.1
   firebase_core: ^2.13.0
   cloud_firestore: ^4.7.1
-  flutter_fast_forms: ^11.0.0
+  flutter_fast_forms: ^12.0.0
   firebase_storage: ^11.2.2
   flutter_native_splash: ^2.3.0
   cloud_functions: ^4.3.3
@@ -58,12 +58,11 @@ dependencies:
   http: ^0.13.6
   fake_cloud_firestore: ^2.4.1+1
 
-
 flutter_native_splash:
   color: "#FFFFFF" # black background
-  image: assets/images/logo.png 
+  image: assets/images/logo.png
   android_12:
-      image: assets/images/logo.png
+    image: assets/images/logo.png
 
 dev_dependencies:
   flutter_test:
@@ -75,14 +74,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
